chore: Updated .gitignore File to include virtual enviroments and vscode settings and added comments for clarity

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,15 @@
+# Data files
 data/
 *.csv
+
+# Jupyter Notebook checkpoints
 *.ipynb_checkpoints/
+
+# Python cache files
 __pycache__/
+
+# VS Code settings
+.vscode/
+
+# Virtual environments
+.venv/
